<resources>
    <string name="app_name">WeTalk</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="chats_fragment">Chats Fragment</string>
    <string name="groups_fragment">Groups Fragment</string>
    <string name="contacts_fragment">Contacts Fragment</string>
    <string name="phone_number">Phone Number</string>
    <string name="send_verification_code">Send Verification Code</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="verify_code">Verify Code</string>
    <string name="search_item">search_item</string>
    <string name="settings">Settings</string>
    <string name="new_group">New group</string>
    <string name="new_broadcast">New broadcast</string>
    <string name="user_name">user name</string>
    <string name="status">status</string>
    <string name="logout">Logout</string>
    <string name="update">update</string>
    <string name="edit_profile_pic_item">edit_profile_pic_item</string>
    <string name="settings_back">settings_back</string>
    <string name="search">Search</string>
    <string name="search_txt">Search...</string>
    <string name="welcome_to_wetalk">Welcome To WeTalk</string>
    <string name="continue_btn">Continue</string>
    <string name="wetalk_will_send_you_sms_message_to_verify_your_phone_number">WeTalk will send you SMS message to verify your phone number.</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="profile_information">Profile information</string>
    <string name="attach_a_profile_picture_optional_and_type_your_name">Attach a profile picture (optional) and type your name</string>
    <string name="next">next</string>
</resources>
