<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_item"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/new_group"
        android:title="@string/new_group"
        app:showAsAction="never" />

    <item
        android:id="@+id/new_broadcast"
        android:title="@string/new_broadcast"
        app:showAsAction="never" />

    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>