<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/profile_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_information"
        android:layout_gravity="center"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        android:textSize="20sp" />

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/first_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/attach_a_profile_picture_optional_and_type_your_name"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/textColor" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/profile_image"
            android:transitionName="shared_profile_image"/>

        <ProgressBar
            android:id="@+id/profile_progressbar"
            android:layout_width="100dp"
            android:indeterminateTint="@android:color/black"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"/>

        <EditText
            android:id="@+id/set_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_image"
            android:inputType="textMultiLine"
            android:hint="@string/user_name"
            android:focusable="true"
            android:drawableEnd="@drawable/user"
            android:drawablePadding="15dp"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:padding="15dp"
            android:layout_marginTop="30dp"/>

        <EditText
            android:id="@+id/set_user_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/set_user_name"
            android:inputType="textMultiLine"
            android:hint="@string/status"
            android:drawableEnd="@drawable/information"
            android:drawablePadding="15dp"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:padding="15dp"
            android:layout_marginTop="30dp"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/first_layout"
        android:gravity="bottom">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/next_profile_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/next"
                android:textColor="@android:color/background_light"
                android:textStyle="bold"
                android:background="@drawable/ripple_effect"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="20sp"
                android:padding="15dp"
                android:textSize="20sp"/>

        </RelativeLayout>


    </RelativeLayout>

</RelativeLayout>