<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <include
        android:id="@+id/main_page_toolbar"
        layout="@layout/app_bar_layout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/main_page_toolbar"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/profile_image2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"
            android:src="@drawable/profile_image"
            android:transitionName="shared_profile_image" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/profile_image"
            android:transitionName="shared_profile_image" />

        <EditText
            android:id="@+id/set_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_image"
            android:inputType="textMultiLine"
            android:hint="@string/user_name"
            android:drawableEnd="@drawable/user"
            android:drawablePadding="15dp"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:padding="15dp"
            android:layout_marginTop="30dp"/>

        <EditText
            android:id="@+id/set_user_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/set_user_name"
            android:inputType="textMultiLine"
            android:hint="@string/status"
            android:drawableEnd="@drawable/information"
            android:drawablePadding="15dp"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:padding="15dp"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/profile_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/set_user_status"
            android:visibility="invisible"
            android:textSize="20sp"
            android:textAlignment="textEnd"
            android:drawableEnd="@drawable/telephone"
            android:drawablePadding="15dp"
            android:textColor="@color/textColor"
            android:textStyle="normal"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:padding="15dp"
            android:layout_marginTop="30dp"/>

        <Button
            android:id="@+id/update_profile_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_phone_number"
            android:textAlignment="center"
            android:text="@string/update"
            android:textColor="@android:color/background_light"
            android:textStyle="bold"
            android:background="@drawable/ripple_effect"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:padding="15dp"
            android:layout_marginTop="30dp"
            android:textSize="20sp"/>

    </RelativeLayout>

</RelativeLayout>